--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -6,3 +6,9 @@
   font-family: 'MontserratRegular';
   src: url('../fonts/Montserrat-Regular.ttf') format('truetype')
 }
+
+@font-face {
+  font-family: 'MyriadProReg';
+  src: url('../fonts/Myriad-Pro-Regular.ttf') format('truetype'),
+        url('../fonts/MyriadPro-Regular.otf') format('opentype')
+}
