--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -10,3 +10,9 @@
   -webkit-background-clip: padding-box;
   background-clip:         padding-box;
 }
+
+.box-shadow(@shadow) {
+  -webkit-box-shadow: @shadow;
+     -moz-box-shadow: @shadow;
+          box-shadow: @shadow;
+}
