--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,6 @@
 @montserrat-regular: 'MontserratRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @montserrat-bold: 'MontserratBold', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@myriadpro-reg: 'MyriadProReg', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @light-gray:#eee;
 @gray-border:#dadada;
