--- a/src/views/layouts/main.jade
+++ b/src/views/layouts/main.jade
@@ -8,7 +8,8 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     include ../includes/head
   body
-    block content
+    #country-search
+        block content
 
     // build:js /js/bundle.min.js
     script(src="/js/bundle.js")
