successfully populated countries

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6{
     border: 1px solid @gray-border;
     background-color: @dark-gray;
 
-    &#searchField{
+    &#search{
       width:100%;
       font-family: @montserrat-regular;
       padding:10px;
@@ -77,6 +77,7 @@ h1,h2,h3,h4,h5,h6{
     position:absolute;
     right:15px;
     top:13px;
+    cursor: pointer;
   }
 }
 
