--- a/src/less/main.less
+++ b/src/less/main.less
@@ -51,6 +51,7 @@
 @import "fonts.less";
 @import "custom.less";
 @import "keyboard.less";
+@import "results.less";
 
 // Utility classes
 @import "../../bower_components/bootstrap/less/utilities.less";
