--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,9 +2,11 @@
 @montserrat-bold: 'MontserratBold', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @myriadpro-reg: 'MyriadProReg', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-@light-gray:#eee;
 @gray-border:#dadada;
+@gray-lang:#8f8f8f;
+@light-gray:#eee;
 @dark-gray:#e3e3e3;
+@darker-gray:#363636;
 @dark-blue:#2c3e50;
 @white:#fff;
 @black:#000;
