--- a/src/views/layouts/main.jade
+++ b/src/views/layouts/main.jade
@@ -11,6 +11,10 @@ html
     #country-search
         block content
 
-    // build:js /js/bundle.min.js
-    script(src="/js/bundle.js")
-    // /build
+    script(src="./js/vendor/jquery-1.11.3.min.js", type="text/javascript")
+    script(src="./js/data-parse.js", type="text/javascript")
+    script(src="./js/keyboard.js", type="text/javascript")
+    script(src="./js/results.js", type="text/javascript")
+    //- // build:js /js/bundle.min.js
+    //- script(src="/js/bundle.js")
+    //- // /build
