--- a/src/views/pages/index.jade
+++ b/src/views/pages/index.jade
@@ -1,7 +1,12 @@
 mixin KeyboardKey(key)
   li
     a.key-container(class="#{key.key_shape}", href="#", data-char-id="#{key.key_char}")
-      .character!= key.key_char
+      -if (key.key_char === "enter"){
+        .character
+          .enter-btn
+      -} else {
+        .character!= key.key_char
+      -}
 
 
 extends ../layouts/main
@@ -9,46 +14,7 @@ block content
   .row.row-centered
     .col-xs-11.col-centered
       #widget-container
-        .row
-          .col-xs-12
-            #title-container
-              h1 Search Widget
-        //- keyboard and search results
+        include ../includes/widget
 
-        #left-container
-          //- input field
-          .row.row-centered
-            .col-xs-11.col-centered
-              #search-container
-                input(type="text", name="searchTerm", tabindex="1", id="searchField")
-                #clear-search
-
-          //- keybaord
-          .row.row-centered
-            .col-xs-11.col-centered
-              #keyboard-container
-                ul#row-1
-                  each key in keyboard_layout.row_1
-                    +KeyboardKey(key)
-                br
-
-                ul#row-2
-                  each key in keyboard_layout.row_2
-                    +KeyboardKey(key)
-                br
-
-                ul#row-3
-                  each key in keyboard_layout.row_3
-                    +KeyboardKey(key)
-                br
-
-                ul#row-4
-                  each key in keyboard_layout.row_4
-                    +KeyboardKey(key)
-
-
-        //- scrollable search results
-        #right-container
-          #results-container
 
 
