got keyboard working properly

--- a/src/less/results.less
+++ b/src/less/results.less
@@ -2,11 +2,13 @@ ul{
   &#results{
     li{
       width:100%;
-      padding:8px 20px;
       text-align: left;
       border-bottom: 1px solid @gray-border;
     }
     a{
+      display:inline-block;
+      width:100%;
+      padding:8px 20px;
       &:hover, &:focus, &:active{
         background-color: @darker-gray;
       }
