--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -6,7 +6,7 @@
 @gray-lang:#8f8f8f;
 @light-gray:#eee;
 @dark-gray:#e3e3e3;
-@darker-gray:#363636;
+@darker-gray:#e6e6e6;
 @dark-blue:#2c3e50;
 @white:#fff;
 @black:#000;
