--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,6 +9,7 @@
 @darker-gray:#e6e6e6;
 @dark-blue:#2c3e50;
 @white:#fff;
+@result-white: #f5f6f7;
 @black:#000;
 @char-bg:#f5f6f7;
 @key-color:#767777;
