fixed search, wasnt searching entire lang array

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -1,6 +1,7 @@
 body {
   background: @dark-blue;
   font-family: @montserrat-regular;
+  padding: 20px 0;
 }
 h1,h2,h3,h4,h5,h6{
   font-family: @montserrat-bold;
