--- a/src/less/results.less
+++ b/src/less/results.less
@@ -12,10 +12,11 @@ ul{
       width:100%;
       position: relative;
       background-color: @result-white;
+      text-decoration: none;
       &:hover, &:focus, &:active{
         background-color: @darker-gray;
         .hover-bar{
-          width:10px;
+          width:5px;
           height:100%;
           background-color: @gray-border;
           position: absolute;
