swapped out enter for backspace

--- a/src/less/keyboard.less
+++ b/src/less/keyboard.less
@@ -15,7 +15,7 @@ a.key-container{
   font-family:@myriadpro-reg;
   text-decoration: none;
   &.round, &.square, &.rect{
-    &:hover, &:active, &:focus{
+    &:hover{
       background-color: @gray-border;
     }
   }
@@ -42,8 +42,8 @@ a.key-container{
     font-size: 18px;
     top: 1px;
     position: relative;
-    .enter-btn{
-      background-image: url(../img/enter-btn.png);
+    .backspace-btn{
+      background-image: url(../img/backspace-btn.png);
       background-repeat: no-repeat;
       height:17px;
       width:27px;
