--- a/src/views/includes/mixins.jade
+++ b/src/views/includes/mixins.jade
@@ -1,9 +1,9 @@
 mixin KeyboardKey(key)
   li
     a.key-container(class="#{key.key_shape}", href="#", data-char-id="#{key.key_char}")
-      -if (key.key_char === "enter"){
+      -if (key.key_char === "backspace"){
         .character
-          .enter-btn
+          .backspace-btn
       -} else {
         .character!= key.key_char
       -}
